# portia-sdk-python

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKEND_IMPLEMENTATION_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATIONS.md  MILESTONE_AGENT.md  README.md  README_GUI.md  V1_REMOVAL_SUMMARY.md  config.json  daytona_logs.py  daytona_portia_gui.py  demo_decorator.py  demo_gui.py  dogfood-example.py  eval.py  evals.py  example.py  example_builder.py  example_gui.py  example_lite.py  existing_file.txt  hack.py  main.py  portia_gui.py  portia_gui.tcss  pyproject.toml  test.py  tunic.py
.claude/commands/: lint-diff.md
.cursor/: context.md  rules
.cursor/rules/: sdk-context.mdc
.github/: pull_request_template.md  release.yml
.github/scripts/: clear_llm_cache.sh
.github/workflows/: contrib.yml  create-release-pr.yml  create-release-tag.yml  daily-tests.yml  deploy_pypi.yml  evals.yml  generate-notes-after-release.yml  licence.yml  lint.yml  main.yml  pr_reviewer_assigned.yml  pyright.yml  release.yml  ruff.yml  security.yml  testing.yml  trigger-downstream-updates.yml
.hooks/linting/: claude-linting.md
data/earth-whispers/: poem.txt
data/laser-sharks-ballad/: poem.txt
docs/: README.md
docs/SDK/: sidebar.json
docs/evals-steel-thread/: custom-backend.md  evals-custom-evaluators.md  evals-overview.md  evals-results.md  evals-tool-stubbing.md  steel-thread-intro.md  steel-thread-quickstart.md  streams-custom-evaluators.md  streams-overview.md  streams-results.md
docs/extend-run-tools/: add-custom-tools.md  browser-tools.md  clarifications-in-tools.md  cloud-tool-registry.md  integrating-tools.md  intro-to-tools.md  mcp-servers.md
docs/generate-and-run-plans/: build-plan.md  generate-plan.md  inputs-outputs.md  run-plan.md  store-retrieve-plan-runs.md
docs/get-started/: getting-started-tour.md  install.md  manage-config.md  setup-account.md
docs/handle-auth-clarifications/: run-portia-tools.md  understand-clarifications.md
docs/running-in-production/: agent-memory.md  agent-observability.md  execution-hooks.md  manage-end-users.md
docs/security/: security.md
docs/source/: conf.py  index.rst
docs/telemetry/: telemetry.md
emma_examples/comply_advantage/: comply_advantage_scraping_demo.py
portia/: __init__.py  __main__.py  clarification.py  clarification_handler.py  cli.py  cli_clarification_handler.py  client.py  cloud.py  common.py  config.py  config_loader.py  context.py  cost_estimator.py  deprecation.py  deprecation_utils.py  end_user.py  errors.py  execution_context.py  execution_hooks.py  execution_state.py  gemini_langsmith_wrapper.py  llm_wrapper.py  logger.py  logging.py  mcp_session.py  migrate_legacy_plans.py  milestone_agent.py  milestone_agent_examples.py  milestone_plan.py  model.py  plan.py  plan_run.py  plan_run_v2.py  plan_storage.py  planner.py  portia.py  portia_lite.py  prefixed_uuid.py  run_context.py  runner.py  (+11 more)
portia/_experimental/: README.md
portia/_unstable/: browser_tool.py  model.py
portia/agents/: __init__.py  agent_execution_manager.py  base_agent.py  complex_langgraph_agent.py  context.py  execution_utils.py  (+5 more)
tests/: __init__.py  test_loguru_fix.py  test_plan_storage.py  test_planner.py  test_runner.py  test_tool.py  test_tool_decorator.py  test_tool_registry.py  utils.py
(+299 files in other folders)
